--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Bellota+Text:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>kras-go-game</title>
     </head>
     <body>
         <div id="app"></div>
+        <noscript>You need to enable JavaScript to run this app.</noscript>
         <script type="module" src="/src/main.js"></script>
     </body>
 </html>
